manifests/hidmo/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hidmo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hidmo-backend
  template:
    metadata:
      labels:
        app: hidmo-backend
    spec:
      containers:
        - name: kong
          image: kong:3.9.1
          volumeMounts:
            - name: kong-config
              mountPath: /etc/kong
          ports:
            - containerPort: 8000
            - containerPort: 8443
            - containerPort: 8002
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
