manifests/hidmo/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hidmo-backend
spec:
  selector:
    app: hidmo-backend
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
