manifests/hidmo/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hidmo-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: api-hidmo.leultewolde.com
      http:
        paths:
          - path: /micro1
            pathType: Prefix
            backend:
              service:
                name: micro1
                port:
                  number: 80
          - path: /micro2
            pathType: Prefix
            backend:
              service:
                name: micro2
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hidmo-backend
                port:
                  number: 80
